# LightRAG

./: pyproject.toml
examples/: lightrag_zhipu_demo.py
lightrag/api/: lightrag_server.py  run_with_gunicorn.py  utils_api.py
lightrag/api/routers/: document_routes.py
lightrag/kg/: postgres_impl.py  redis_impl.py  shared_storage.py
