[project]
name = "lightrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "ascii-colors>=0.8.0",
    "asyncpg>=0.30.0",
    "configparser>=7.2.0",
    "distro>=1.9.0",
    "fastapi>=0.115.12",
    "future>=1.0.0",
    "gensim>=4.3.3",
    "graspologic>=3.4.1",
    "httpcore>=1.0.8",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jiter>=0.9.0",
    "nano-vectordb>=0.0.4.3",
    "numpy>=1.26.4",
    "openai>=1.76.0",
    "pandas>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pipmaster>=0.5.4",
    "pydantic>=2.11.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "setuptools>=79.0.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.2",
    "xlsxwriter>=3.1.0",
]
